--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon backend/server.js",
-    "start-prod":"node backend/server.js",
+    "start": "nodemon backend/server.js",
+    "start-prod": "node backend/server.js",
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
     "serve": "serve -s dist --prefix frontend"
   },
@@ -21,6 +21,7 @@
     "leaflet": "^1.9.4",
     "node-mailer": "^0.1.1",
     "react-bootstrap": "^2.10.0",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "serve": "^14.2.1"
   }
 }
