--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon backend/server.js",
     "start-prod": "node backend/server.js",
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
-    "serve": "serve -s dist --prefix frontend"
+    "serve": "/frontend/serve -s dist"
   },
   "author": "Alhassan Sahad",
   "license": "MIT",
