--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "leaflet": "^1.9.4",
+    "node-fetch": "^2.7.0",
     "node-mailer": "^0.1.1",
     "react-bootstrap": "^2.10.0",
     "react-leaflet": "^4.2.1",
